--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "express": "^4.16.3",
     "jsonschema": "^1.2.4",
     "locus": "^2.0.1",
-    "pg": "^8.3.3",
-    "supertest": "^3.3.0"
+    "pg": "^8.3.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
